# plane

./: .env.example  .gitignore  .ruff.toml  .semgrep.yml  Dockerfile  PLAN.md  README.md  SPEC.md  analytics.ts  codecov.yml  doppler.yaml  justfile  mypy.ini  package.json  pnpm-lock.yaml  process-compose.yml  pyproject.toml  pytest.ini  sentry.config.ts
.agileplus/specs/001-core-setup/: meta.json  spec.md
.semgrep/: typescript.yml
apps/api/: .skip
apps/api/plane/authentication/: authkit.py  urls.py
apps/api/plane/authentication/views/authkit/: __init__.py  views.py
apps/api/plane/db/migrations/: 0113_alter_cycle_timezone_alter_draftissue_assignees_and_more.py
apps/api/plane/db/models/: base.py
apps/api/plane/settings/: common.py
apps/web/: package.json
apps/web/app/: provider.tsx
apps/web/app/(all)/[workspaceSlug]/(extended)/: layout.tsx
apps/web/app/(all)/[workspaceSlug]/(extended)/agents/: create-agent-modal.tsx  create-modal.tsx  page.tsx
apps/web/app/(all)/[workspaceSlug]/(extended)/agents/[agentId]/: page.tsx
apps/web/app/(all)/[workspaceSlug]/(extended)/worktrees/: page.tsx
apps/web/app/routes/: extended.ts
apps/web/core/providers/authkit/: index.tsx
docs/: SECRETS_ROTATION.md
e2e/: playwright.config.ts
e2e/tests/agents/: agents-page.spec.ts
e2e/tests/worktrees/: worktrees-page.spec.ts
